blog detail sec

--- a/blogdetail.html
+++ b/blogdetail.html
@@ -19,97 +19,105 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav-bar  border-gray-200 px-4 lg:px-6 py-2.5 ">
-            <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl mx-0">
-                <a href="index.html" class="flex justify-center items-center">
-                    <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />                  
-                </a>
-                <div class="flex items-center lg:order-2">
-                    
-                    <a href="contactus.html" class="bg-teal-500 hover:bg-teal-700 text-white py-2 px-4 rounded raleway">Contact Us</a>
-                    <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
-                        <span class="sr-only">Open main menu</span>
-                        <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
-                        <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
-                    </button>
-                </div>
-                <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
-                    <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
-                        <li>
-                            <!-- <a href="index.html" class="block py-2 pr-4 pl-3 text-white rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white raleway" aria-current="page">HOME</a> -->
-                            <a href="index.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">HOME</a>
-
-                        </li>
-                        <li>
-                            <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">FACE AND NECK</a>
-                        </li>
-                        <li>
-                            <a href="body.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">BODY</a>
-                        </li>
-                        <li>
-                            <a href="esella.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">ESELLA</a>
-                        </li>
-                        <li>
-                            <a href="sexual.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700 raleway">SEXUAL DYSFUNCTION</a>
-                        </li>
-                    </ul>
-                </div>
+  <header class="">
+    <nav class="nav-bar px-4 lg:px-6 py-2.5 ">
+        <div class="w-full md:w-10/12 xl:w-12/12 flex flex-wrap justify-between items-center mx-auto relative ">
+            <div class="background absolute top-[120%] left-[2%] w-full h-full ">
+                <img src="assets/images/Line1.png" alt="line" class="hidden md:block">
             </div>
-        </nav>
-    </header>
+            <a href="index.html" class="flex justify-center items-start ">
+                <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo" />                  
+            </a>
+            <div class="flex   lg:order-2 relative z-10">
+                <a href="contactus.html" class="relative z-20  bg-cyan-200  hover:bg-cyan-700 text-black-900 font-semibold py-2 px-4  raleway border-1">Contact Us</a>
+                <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500   lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+                    <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+                </button>
+            </div>
+            <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1" id="mobile-menu-2">
+                <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+                    <li>
+                        <!-- <a href="index.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white" aria-current="page">HOME</a> -->
+                        <a href="index.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">HOME</a>
+                        
+                    </li>
+                    <li>
+                        <a href="faceAndNeck.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">FACE AND NECK</a>
 
-    <main>
+                    </li>
+                    <li>
+                        <a href="body.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">BODY</a>
+                    </li>
+                    <li>
+                        <a href="esella.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">ESELLA</a>
+                    </li>
+                    <li>
+                        <a href="sexual.html" class="raleway block py-2 pr-4 pl-3  text-white border-b border-gray-100 hover:bg-gray-50 lg:hover:bg-transparent lg:border-0 lg:hover:text-primary-700 lg:p-0 dark:text-gray-400 lg:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white lg:dark:hover:bg-transparent dark:border-gray-700">SEXUAL DYSFUNCTION</a>
+                    </li>
+                </ul>
+            </div>
+        </div> 
+    </nav>
+  </header>
 
-        <!-- main-banner  -->
-        <section>
-            <div class="main-banner relative truncate">
-                <div class="main-banner-background-image absolute top-0 left-[-7%] w-full h-full">
-                    <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
-                </div>
-                <div class="container mx-auto flex justify-center">
-                    <div class="w-10/12 lg:w-8/12 xl:w-10/12">
-                        <div class="main-banner-container">
-                            <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
-                                <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
-                                    <img src="assets/faceAdNecks-images/star.png" alt="star">
-                                </div>
-                                <div class="banner-first-image text-white">
-                                    <img src="assets/blog-detail-image/banner-image-1.png" alt="banner-image" class="max-w-full">
-                                </div>
-                                <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
-                                  <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
-                                      <span class="block lg:inline-block">BLOG DETAIL</span>
-                                  </h2>
-                              </div>
+<main>
+
+    <!-- main-banner  -->
+    <section>
+        <div class="main-banner relative truncate">
+            <div class="main-banner-background-image absolute top-0 left-[-7%] w-full h-full">
+                <img src="assets/faceAdNecks-images/banner-vector.png" alt="main banner image">
+            </div>
+            <div class="container mx-auto flex justify-center">
+                <div class="w-10/12 lg:w-8/12 xl:w-full">
+                    <div class="main-banner-container">
+                        <div class="w-full flex flex-row lg:flex-row justify-start relative items-center lg:items-start">
+                            <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
+                                <img src="assets/faceAdNecks-images/star.png" alt="star">
                             </div>
-                            <div class="w-11/12 mt-4 relative">
-                                <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
-                                    <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                            <div class="banner-first-image text-white">
+                                <img src="assets/blog-detail-image/banner-image-1.png" alt="banner-image" class="max-w-full">
+                            </div>
+                            <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
+                              <h2 class="cormorant text-start lg:text-left ml-3 lg:ml-0">
+                                  <span class="block lg:inline-block">BLOG DETAIL</span>
+                              </h2>
+                          </div>
+                        </div>
+                        <div class="w-11/12 mt-4 relative">
+                            <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
+                                <img src="assets/faceAdNecks-images/leaves.png" alt="leaves">
+                            </div>
+                            <div class="leave-background-image absolute bottom-[-20%] right-[-20%] block md:hidden">
+                                <img src="assets/images/background-leave-2.png" alt="leaves">
+                              </div>
+                            <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
+                                <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
+                                    <div class="banner-p my-4 ">
+                                        <p class="text-color raleway">We use premium products for a <br> more natural result.</p>
+                                    </div>
+                                    <div class="banner-crub flex justify-start lg:justify-start items-center">
+                                        <div class="banner-crub-image mr-2">
+                                            <a href="index.html"><img src="assets/body-images/home.png" alt="Home" class="w-10/12"></a>
+                                        </div>
+                                        <p class="mr-3 text-white"> > </p>
+                                        <p class="text-color cormorant text-xl mr-2"><a href="blog.html">blog</a></p>
+                                        <p class="mr-3 text-white"> > </p>
+                                        <p class="text-white cormorant text-xl">blog detail</p>
+                                    </div>
                                 </div>
-                                <div class="banner-second-part flex flex-col xl:flex-row justify-between items-center lg:items-start">
-                                    <div class="banner-second-text text-start w-full xl:w-1/2 lg:text-left order-last xl:order-first ">
-                                        <div class="banner-p my-4 ">
-                                            <p class="text-white raleway ">We use premium products for a <br> more natural result.</p>
-                                        </div>
-                                        <div class="banner-crub flex justify-start lg:justify-start items-center">
-                                            <div class="banner-crub-image mr-3">
-                                                <a href="index.html"><img src="assets/body-images/home.png" alt="Home"></a>
-                                            </div>
-                                            <p class="mr-3 text-white"> > </p>
-                                            <p class="text-white raleway">blog detail</p>
-                                        </div>
-                                    </div>
-                                    <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
-                                        <img src="assets/blog-detail-image/banner-image-2.png" alt="banner-image" class="max-w-full">
-                                    </div>
+                                <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
+                                    <img src="assets/blog-detail-image/banner-image-2.png" alt="banner-image" class="max-w-full">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
 
         <!-- IMPECT SECTION  -->
