--- a/sexual.html
+++ b/sexual.html
@@ -148,9 +148,9 @@
                     <div class="w-full flex flex-wrap justify-around gap-6">
                         <!-- Option Sections -->
                         <div class="container mx-auto flex justify-center relative z-10">
-                            <div class="w-10/12 flex flex-wrap justify-around gap-6">
+                            <div class="w-10/12 flex  justify-between gap-6">
                                 <!-- Part 1 -->
-                                <div class="w-full md:w-1/3 xl:w-1/5 flex flex-col items-baseline mb-6">
+                                <div class="w-full md:w-1/3 xl:w-2/6 flex flex-col items-baseline mb-6">
                                     <div class="option-section mb-6 flex justify-around items-center">
                                         <div class="option-image">
                                             <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
@@ -186,7 +186,7 @@
                                 </div>
                         
                                 <!-- Part 2 -->
-                                <div class="w-full md:w-1/3 xl:w-1/5 flex flex-col items-baseline mb-6">
+                                <div class="w-full md:w-1/3 xl:w-2/6 flex flex-col items-baseline mb-6">
                                     <div class="option-section mb-6 flex justify-around items-center">
                                         <div class="option-image">
                                             <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
@@ -200,9 +200,7 @@
                                             <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
                                         </div>
                                         <div class="option-contant ml-4">
-                                            <p class="font-semibold cormorant"><div>
-                                                <img src="../images/Vector (5).png" alt="icon">
-                                              </div></p>
+                                            <p class="font-semibold cormorant">Non-surgical vaginal rejuvenation</p>
                                         </div>
                                     </div>
                                     <div class="option-section mb-6 flex justify-around items-center">
@@ -217,7 +215,7 @@
                                 </div>
                         
                                 <!-- Part 3 -->
-                                <div class="w-full md:w-1/3 xl:w-1/5 flex flex-col items-baseline mb-6">
+                                <div class="w-full md:w-1/3 xl:w-2/6 flex flex-col items-baseline mb-6">
                                     <div class="option-section mb-6 flex justify-around items-center">
                                         <div class="option-image">
                                             <img src="assets/faceAdNecks-images/menu-image.png" alt="menu-image">
