--- a/faceAndNeck.html
+++ b/faceAndNeck.html
@@ -560,7 +560,7 @@
                     </h2>
                 </div>
                 <div class="container mx-auto flex justify-start  md:justify-center">
-                    <div class="w-full md:w-10/12 relative">
+                    <div class="w-full md:w-11/12 relative">
                         <!-- Background Image -->
                         <!-- <div class="discover-background-image absolute bottom-[-10%] md:bottom-[-20%] right-[-5%] md:right-[-10%] w-6/12 md:w-3/12">
                             <img src="assets/faceAdNecks-images/Discover-background-image.png" alt="discover background image">
@@ -731,7 +731,7 @@
                     </h2>
                 </div>
                 <div class="container mx-auto flex justify-start  md:justify-center">
-                    <div class="w-full md:w-10/12 relative">
+                    <div class="w-full md:w-11/12 relative">
                         <!-- Background Image -->
                         <!-- <div class="discover-background-image absolute bottom-[-10%] md:bottom-[-20%] right-[-5%] md:right-[-10%] w-6/12 md:w-3/12">
                             <img src="assets/faceAdNecks-images/Discover-background-image.png" alt="discover background image">
@@ -808,7 +808,7 @@
 
          <!-- vascular section  -->
 
-         <section>
+         <section class="mb-4 md:mb-10">
             <div class="Radiant-section mt-0 md:mt-8">
                 <!-- Section Heading -->
                 <div class="radiant-heading text-start md:text-center mb-8 ml-4 md:ml-0">
