body page complete

--- a/body.html
+++ b/body.html
@@ -78,7 +78,7 @@
                             <div class="star-background-image absolute top-[-6%] right-[15%] hidden lg:block">
                                 <img src="assets/faceAdNecks-images/star.png" alt="star">
                             </div>
-                            <div class="banner-first-image text-white">
+                            <div class="banner-first-image text-white ">
                                 <img src="assets/body-images/banner-image-1.png" alt="banner-image" class="max-w-full">
                             </div>
                             <div class="banner-heading text-4xl text-white ml-0 lg:ml-8 mt-4 lg:mt-3 lg:text-6xl">
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <div class="banner-second-image1 mt-6 xl:-mt-44 order-first xl:order-last">
-                                    <img src="assets/body-images/banner-image-2.png" alt="banner-image" class="max-w-full">
+                                    <img src="assets/body-images/banner-image-2.png" alt="banner-image" class="max-w-full ">
                                 </div>
                             </div>
                         </div>
@@ -486,7 +486,7 @@
          </section>
 
          <!-- body-video section  -->
-         <section>
+         <section class="mb-10 md:mb-72">
           <div class="body-video-section mb-0 ">
               <div class="container mx-auto flex flex-col lg:flex-row justify-around items-center ">
                   <div class="body-video-image w-full lg:w-11/12 flex justify-center relative">
@@ -513,8 +513,7 @@
           </div>
         </section>
 
-         <section class="cols-padding"></section>
-        <section class="cols-padding"></section>
+
     </main>
     
     <footer>
