blog detail complete

--- a/blogdetail.html
+++ b/blogdetail.html
@@ -229,8 +229,8 @@
                 <div class="solution-container flex justify-center">
                   <div class="w-full">
                     <!-- Heading -->
-                    <div class="solution-head mb-5 text-center lg:text-left">
-                      <h3 class="font-bold text-lg lg:text-3xl cormorant">
+                    <div class="solution-head mb-5 text-start md:text-center lg:text-left">
+                      <h3 class="font-bold text-3xl lg:text-3xl cormorant">
                         Solutions for Common <span class="font-normal">Skin Concerns</span>
                       </h3>
                     </div>
@@ -326,8 +326,8 @@
                     <div class="embarass-part">
                       <!-- Heading & Text Section -->
                       <div class="w-full border-b-2 border-gray-200 pb-5">
-                        <div class="embaracing-head mb-4 text-center md:text-left">
-                          <h4 class="font-bold text-lg md:text-3xl cormorant">
+                        <div class="embaracing-head mb-4 text-start md:text-center md:text-left">
+                          <h4 class="font-bold  text-3xl md:text-3xl cormorant">
                             Embracing a Holistic Approach
                             <span class="font-normal">To Skin Care</span>
                           </h4>
@@ -396,8 +396,8 @@
               <div class="container mx-auto">
                 <div class="leave-replay-container flex justify-center">
                   <div class="w-full ">
-                    <div class="lave-head text-center md:text-left">
-                      <h4 class="font-bold text-lg md:text-3xl cormorant">
+                    <div class="lave-head text-start md:text-center md:text-left">
+                      <h4 class="font-bold text-3xl  md:text-3xl cormorant">
                         Leave a <span class="font-normal">reply</span>
                       </h4>
                       <p class="text-color my-4 text-sm md:text-base raleway">
@@ -446,7 +446,7 @@
                             </div>
           
                             <!-- Submit Button -->
-                            <button type="submit"class="px-3 py-2 font-semibold text-black bg-cyan-300 hover:bg-teal-600 text-sm  shadow-md raleway relative">
+                            <button type="submit"class="px-3 py-2 font-semibold text-black bg-cyan-300 hover:bg-cyan-400 text-sm  shadow-md raleway relative">
                               <div class="back absolute top-[-4%] left-[0%] w-full ">
                                 <img src="assets/blog-detail-image/button-line.png" alt="" >
                               </div>
