--- a/contactus.html
+++ b/contactus.html
@@ -29,7 +29,9 @@
                 <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo" />                  
             </a>
             <div class="flex   lg:order-2 relative z-10">
-                <a href="contactus.html" class=" hidden md:block relative z-20  bg-cyan-200  hover:bg-cyan-700 text-black-900 font-semibold py-2 px-4  raleway border-1">Contact Us</a>
+              <div class="btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
+                <a href="contactus.html" class=" hidden md:block relative z-20   text-black-900 font-semibold py-1 px-3  raleway ">Contact Us</a>
+            </div>
                 <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500   lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -258,7 +260,7 @@
                                   required
                                 ></textarea>
                               </div>
-                              <button type="submit"class="px-3 py-2 font-semibold text-black bg-cyan-300 hover:bg-teal-600 text-sm  shadow-md raleway relative">
+                              <button type="submit"class="px-3 py-2 font-semibold text-black bg-cyan-200 hover:bg-cyan-300 text-sm  shadow-md raleway relative">
                                 <div class="back absolute top-[0%] left-[0%] w-full ">
                                   <img src="assets/blog-detail-image/button-line.png" alt="" >
                                 </div>
