--- a/body.html
+++ b/body.html
@@ -30,7 +30,9 @@
                 <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo" />                  
             </a>
             <div class="flex   lg:order-2 relative z-10">
-                <a href="contactus.html" class=" hidden md:block relative z-20  bg-cyan-200  hover:bg-cyan-700 text-black-900 font-semibold py-2 px-4  raleway border-1">Contact Us</a>
+              <div class="btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
+                <a href="contactus.html" class=" hidden md:block relative z-20   text-black-900 font-semibold py-1 px-3  raleway ">Contact Us</a>
+            </div>
                 <button data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
@@ -475,7 +477,7 @@
                                       </p>
                                   </div>
                                   <div class="call-button flex justify-center md:justify-start">
-                                      <a href="video.html" class="bg-cyan-200 hover:bg-teal-700 text-black font-semibold py-2 px-4  raleway ">Get in touch</a>
+                                      <a href="faqs.html" class="bg-cyan-200 hover:bg-cyan-300 text-black font-semibold py-2 px-4  raleway ">Get in touch</a>
                                   </div>
                               </div>
                           </div>
@@ -505,7 +507,7 @@
                       </div>
                   </div>
                   <div class="w-full  flex justify-center items-center block lg:hidden  mt-40 md:mt-64 ">
-                    <a href="video.html" class="bg-cyan-200 hover:bg-teal-700 text-black font-semibold py-2 px-4  raleway ">More Videos</a>
+                    <a href="video.html" class="bg-cyan-200 hover:bg-cyan-300 text-black font-semibold py-2 px-4  raleway ">More Videos</a>
                      <!-- Button Container -->
 
                 </div>
