changes in footer

--- a/video.html
+++ b/video.html
@@ -265,7 +265,7 @@
                   <div class="w-full md:w-3/12 lg:w-2/12 mb-8 md:mb-0 flex justify-start">
                     <div class="div flex justify-between items-center border-b border-gray-700 pb-5">
                       <div class="footer-logo ">
-                        <a href=""><img src="assets/images/footer-logo.png" alt="logo" class="w-5/12  md:mx-0"></a>
+                        <a href="index.html"><img src="assets/images/footer-logo.png" alt="logo" class="w-5/12  md:mx-0"></a>
                       </div>
                       <div class="">
                         <div class="footer-social-media flex justify-center md:justify-start space-x-4 ">
