--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
                                   <div class=" swiper-wrapper">
                                       <div class="swiper-slide flex ">
                                         <div class="w-full">
+
                                           <div class="blog-first-part flex items-center justify-center mb-24 md:mb-0">
                                               <div class="blog-first-image w-full pl-5 md:pl-0">
                                                   <img src="assets/images/sction-4-image-1.png" alt="section-4-image" class="max-w-full">
@@ -552,6 +553,7 @@
                                       </div>
                                       <div class="swiper-slide flex ">
                                           <div class="w-full">
+
                                             <div class="blog-first-part flex items-center justify-center mb-24 md:mb-0">
                                                 <div class="blog-first-image w-full pl-5 md:pl-0">
                                                     <img src="assets/images/sction-4-image-1.png" alt="section-4-image" class="max-w-full">
@@ -577,6 +579,7 @@
                                                         <p class="raleway text-color line-clamp-2 md:line-clamp-none ">I had a really good experience at Beauty in LA Clinic.  The staff were super friendly and everything was on time for my appointment. I went in for 20 units of Botox and also decided to do a wrinkle reduction and skin rejuvenation. It's only been a couple of days so I can't see a…</p>
                                                     </div>
                                                 </div>
+
                                             </div>
                                           </div>
                                       </div>
@@ -1100,7 +1103,7 @@
                 <div class="w-full md:w-3/12 lg:w-2/12 mb-8 md:mb-0 flex justify-start">
                   <div class="div flex justify-between items-center border-b border-gray-700 pb-5">
                     <div class="footer-logo ">
-                      <a href=""><img src="assets/images/footer-logo.png" alt="logo" class="w-5/12  md:mx-0"></a>
+                      <a href="index.html"><img src="assets/images/footer-logo.png" alt="logo" class="w-5/12  md:mx-0"></a>
                     </div>
                     <div class="">
                       <div class="footer-social-media flex justify-center md:justify-start space-x-4 ">
