--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
                         <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
                 </div>
-                <div class="hidden justify-between items-center w-full lg:flex lg:w-auto lg:order-1 bg-gray-800 md:bg-transparent" id="mobile-menu-2">
+                <div class="hidden justify-between items-center w-full  lg:flex lg:w-auto lg:order-1 px-4 py-48 md:px-0 md:py-0 bg-img-header relative" id="mobile-menu-2">
+                    <div class="back-image">
+                        <div class="first absolute top-[10%] left-[0%] w-full h-full">
+                              <img src="assets/images/header-vector.png" alt="images" class="w-11/12">
+                        </div>
+                    </div>
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
                         <li>
                             <a href="index.html" class="raleway block py-2 pr-4 pl-3 text-gray-700 rounded bg-primary-700 lg:bg-transparent lg:text-primary-700 lg:p-0 dark:text-white" aria-current="page">HOME</a>
@@ -312,6 +317,7 @@
                                                 <span class="block lg:inline-block text-white font-bold">BEAUTY</span>
                                             </h2>
                                         </div>
+                                        
                                       </div>
                                       <div class="w-11/12 mt-4 relative">
                                           <div class="leave-background-image absolute top-[-80%] right-[-20%] hidden lg:block">
