--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="hidden justify-between items-center w-full  lg:flex lg:w-auto lg:order-1 px-4 py-48 md:px-0 md:py-0 bg-img-header relative" id="mobile-menu-2">
                     <div class="back-image">
-                        <div class="first absolute top-[10%] left-[0%] w-full h-full">
+                        <div class="first absolute top-[10%] left-[0%] w-full h-full block md:hidden">
                               <img src="assets/images/header-vector.png" alt="images" class="w-11/12">
                         </div>
                     </div>
