--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     <header class="">
         <nav class="nav-bar px-4 lg:px-6 py-2.5 ">
-            <div class="w-full md:w-10/12 xl:w-12/12 flex flex-wrap justify-between items-center mx-auto relative ">
+            <div class="w-full md:w-10/12 xl:w-12/12 flex flex-wrap justify-between items-center mx-auto relative z-0">
                 <div class="background absolute top-[120%] left-[2%] w-full h-full ">
                     <img src="assets/images/Line1.png" alt="line" class="hidden md:block" class="">
                 </div>
                 <a href="index.html" class="flex justify-center items-start ">
-                    <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo " />                  
+                    <img src="assets/images/logo.png" class="mr-3 h-6 sm:h-12" alt="Flowbite Logo " />
                 </a>
                 <div class="flex  lg:order-2 relative z-10">
                   <div class="hidden md:block btn bg-cyan-200  hover:bg-cyan-300 p-1 ">
@@ -39,10 +39,13 @@
                         <svg class="hidden w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
                     </button>
                 </div>
-                <div class="hidden justify-between items-center w-full  lg:flex lg:w-auto lg:order-1 px-4 py-48 md:px-0 md:py-0 bg-img-header relative" id="mobile-menu-2">
-                    <div class="back-image">
+                <div class="hidden justify-between items-center w-full  lg:flex lg:w-auto lg:order-1  py-64 md:px-0 md:py-0 bg-img-header relative" id="mobile-menu-2">
+                    <div class="back-image mx-10 md:mx-0">
                         <div class="first absolute top-[10%] left-[0%] w-full h-full block md:hidden">
                               <img src="assets/images/header-vector.png" alt="images" class="w-11/12">
+                        </div>
+                        <div class="first absolute top-[15%] left-[70%] w-full h-full block md:hidden">
+                          <img src="assets/images/banner-Star 2.png" alt="images" class="w-2/12">
                         </div>
                     </div>
                     <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
